[package]
name = "rupl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13"
bincode = "1.3.3"
rumqttc = { version = "0.22.0", features = ["use-rustls", "proxy", "url", "websocket"] }
anyhow = "1.0.72"
dotenv = "0.15.0"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"
log = "0.4"
log4rs = "1.2.0"
